Add: sync instruments Web API
